export const snapshot = {};

snapshot[`tagged union 1`] = `
{
  anyOf: [
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "A",
          type: "string",
        },
        value: {
          type: "boolean",
        },
      },
      required: [
        "type",
        "value",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "B",
          type: "string",
        },
        value: {
          type: "number",
        },
      },
      required: [
        "type",
        "value",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "C",
          type: "string",
        },
        value: {
          type: "string",
        },
      },
      required: [
        "type",
        "value",
      ],
      type: "object",
    },
  ],
  discriminator: "type",
}
`;

snapshot[`tagged union 2`] = `
{
  anyOf: [
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "A",
          type: "string",
        },
        value: {
          type: "boolean",
        },
      },
      required: [
        "type",
        "value",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "B",
          type: "string",
        },
        value: {
          type: "number",
        },
      },
      required: [
        "type",
        "value",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "C",
          type: "string",
        },
        value: {
          type: "string",
        },
      },
      required: [
        "type",
        "value",
      ],
      type: "object",
    },
  ],
  description: "One.",
  discriminator: "type",
}
`;

snapshot[`tagged union 3`] = `
{
  anyOf: [
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "A",
          type: "string",
        },
        value: {
          type: "boolean",
        },
      },
      required: [
        "type",
        "value",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "B",
          type: "string",
        },
        value: {
          type: "number",
        },
      },
      required: [
        "type",
        "value",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "C",
          type: "string",
        },
        value: {
          type: "string",
        },
      },
      required: [
        "type",
        "value",
      ],
      type: "object",
    },
  ],
  description: "Two. One.",
  discriminator: "type",
}
`;
